--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.27.2+6328
+version: 1.28.1+6329
  
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -14,6 +14,8 @@ platforms:
   android:
   ios:
   macos:
+  linux:
+  windows:
   # chrome:
 
 dependencies:
@@ -62,7 +64,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_staggered_grid_view: ^0.7.0
   video_player: ^2.9.2
-  video_compress: ^3.1.3
+  video_compress: ^3.1.4
   markdown_widget: ^2.3.2+6
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
@@ -75,7 +77,7 @@ dependencies:
   flutter_secure_storage: ^10.0.0-beta.4
   avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
-  barcode_scan2: ^4.4.0
+  barcode_scan2: ^4.5.0
   intl: ^0.19.0
   firebase_core: ^3.10.0
   firebase_messaging: ^15.2.0
@@ -105,7 +107,7 @@ dev_dependencies:
   json_serializable: ^6.8.0
   freezed: ^2.5.2
   lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.3
   analyzer: ^5.13.0
   test: ^1.25.2
   dmg: 0.1.3-rc
@@ -130,9 +132,12 @@ flutter_native_splash:
   image_dark: assets/images/logo.png
 # dart run flutter_launcher_icons
 flutter_launcher_icons:
+  image_path: "assets/images/logo.png"
   android: "launcher_icon"
-  ios: true
+  ios:
+    remove_alpha_ios: true
   macos: 
     generate: true
     image_path: "assets/images/logo-bg.png"
-  image_path: "assets/images/logo.png"
+
+
