--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
   get: ^4.6.6
   flutter_easyloading: ^3.0.5
   path_provider: ^2.1.5
-  path: 1.9.0
   convert: ^3.1.2
   shared_preferences: ^2.3.3
   badges: ^3.1.2
@@ -73,7 +72,7 @@ dependencies:
   linkify: ^5.0.0
   flutter_svg: ^2.0.15
   crypto: ^3.0.6
-  web_socket_channel: ^3.0.1
+  web_socket_channel: ^3.0.2
   flutter_secure_storage: ^10.0.0-beta.4
   avatar_plus: ^0.0.5
   freezed_annotation: ^2.4.4
@@ -95,6 +94,8 @@ dependencies:
   amberflutter:
     git:
       url: https://github.com/keychat-io/amberflutter.git
+  web_socket_client: ^0.1.5
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
