--- a/packages/aws/pubspec.yaml
+++ b/packages/aws/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 # Add regular dependencies here.
 dependencies:
   amazon_cognito_identity_dart_2: ^3.5.0
-  crypto: ^3.0.3
+  crypto: ^3.0.6
   encrypt: ^5.0.3
-  dio: ^5.2.1+1
+  dio: ^5.7.0
   app: 1.0.0
 
 dev_dependencies:
