--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,8 +4,10 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.28.1+6330
- 
+version: 1.29.1+6331
+
+isar_version: &isar_version 3.1.8
+
 environment:
   sdk: ">=3.4.3 <4.0.0"
   flutter: ">=3.3.0"
@@ -30,8 +32,12 @@ dependencies:
   badges: ^3.1.2
   equatable: ^2.0.6
   json_annotation: ^4.9.0
-  isar: 3.1.0+1
-  isar_flutter_libs: 3.1.0+1
+  isar: 
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs: # contains Isar Core
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
   permission_handler: ^11.3.1
@@ -75,7 +81,7 @@ dependencies:
   web_socket_channel: ^3.0.2
   flutter_secure_storage: ^10.0.0-beta.4
   avatar_plus: ^0.0.5
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.0.0
   barcode_scan2: ^4.5.0
   intl: ^0.19.0
   firebase_core: ^3.10.0
@@ -86,7 +92,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.2.0-beta.2
   encrypt: ^5.0.3
-  file_picker: ^8.1.6
+  file_picker: ^9.0.2
   image: ^4.5.2
   pub_semver: ^2.1.5
   flutter_new_badger: ^1.1.0
@@ -102,16 +108,18 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter    
-  build_runner: ^2.4.13
-  flutter_lints: ^5.0.0
-  isar_generator: 3.1.0+1
-  json_serializable: ^6.8.0
-  freezed: ^2.5.2
-  lints: ^5.0.0
+  build_runner: ^2.4.15
+  isar_generator: 
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
+  json_serializable: ^6.9.0
+  freezed: ^3.0.0-0.0.dev
   flutter_launcher_icons: ^0.14.3
-  analyzer: ^5.13.0
-  test: ^1.25.2
-  dmg: 0.1.3-rc
+  analyzer: ^6.11.0
+  test: ^1.21.0
+  lints: ^5.1.1
+  flutter_lints: ^5.0.0
+  dmg: ^0.1.3
 
 flutter:
   # The following line ensures that the Material Icons font is
