--- a/packages/app/android/settings.gradle
+++ b/packages/app/android/settings.gradle
@@ -23,6 +23,8 @@ plugins {
   id "dev.flutter.flutter-plugin-loader" version "1.0.0"
   id "com.android.application" version '8.6.1' apply false
   id "org.jetbrains.kotlin.android" version "1.9.24" apply false
+  id 'com.google.gms.google-services' version '4.4.2' apply false
+  id 'com.google.firebase.crashlytics' version '3.0.2' apply false
 }
 
 include ':app'
