--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,9 +4,7 @@ description: keychat
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.29.1+6332
-
-isar_version: &isar_version 3.1.8
+version: 1.29.2+6333
 
 environment:
   sdk: ">=3.4.3 <4.0.0"
@@ -33,10 +31,10 @@ dependencies:
   equatable: ^2.0.6
   json_annotation: ^4.9.0
   isar:
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   isar_flutter_libs: # contains Isar Core
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
@@ -73,7 +71,7 @@ dependencies:
   markdown_widget: ^2.3.2+6
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
-  open_filex: ^4.6.0
+  open_filex: ^4.7.0
   timer_builder: ^2.0.0
   linkify: ^5.0.0
   flutter_svg: ^2.0.15
@@ -84,7 +82,7 @@ dependencies:
   barcode_scan2: ^4.5.0
   intl: ^0.19.0
   firebase_core: ^3.10.0
-  firebase_messaging: ^15.2.0
+  firebase_messaging: ^15.2.4
   firebase_crashlytics: ^4.3.0
   firebase_analytics: ^11.4.0
   async_queue: ^2.0.2
@@ -109,7 +107,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.15
   isar_generator:
-    version: *isar_version
+    version: 3.1.8
     hosted: https://pub.isar-community.dev/
   json_serializable: ^6.9.0
   freezed: ^3.0.0-0.0.dev
