--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -6,6 +5,14 @@ plugins {
     id "com.google.gms.google-services"
     id "com.google.firebase.crashlytics"
 }
+
+dependencies {
+  implementation("androidx.legacy:legacy-support-v4:1.0.0")
+  implementation("androidx.appcompat:appcompat:1.7.0")
+  implementation("com.google.firebase:firebase-analytics")
+  implementation("com.google.firebase:firebase-messaging")
+}
+
 apply from: "../../../keychat_rust_ffi_plugin/cargokit/gradle/plugin.gradle"
 
 def keystoreProperties = new Properties()
