--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -6,13 +6,6 @@ plugins {
     id "com.google.firebase.crashlytics"
 }
 
-dependencies {
-  implementation("androidx.legacy:legacy-support-v4:1.0.0")
-  implementation("androidx.appcompat:appcompat:1.7.0")
-  implementation("com.google.firebase:firebase-analytics")
-  implementation("com.google.firebase:firebase-messaging")
-}
-
 apply from: "../../../keychat_rust_ffi_plugin/cargokit/gradle/plugin.gradle"
 
 def keystoreProperties = new Properties()
@@ -38,7 +31,7 @@ cargokit {
 android {
     compileSdkVersion localProperties.getProperty('flutter.compileSdkVersion').toInteger()
     namespace "com.keychat.io"
-
+    ndkVersion flutter.ndkVersion
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -68,7 +61,7 @@ android {
         multiDexEnabled true
         ndk {
             // abiFilters 'x86','armeabi-v7a','arm64-v8a','x86_64'
-            abiFilters 'arm64-v8a'
+            abiFilters 'x86','x86_64','arm64-v8a'
             // abiFilters 'ARCH_X86','ARCH_ARM32','ARCH_ARM64'
         }
 
@@ -82,7 +75,7 @@ android {
         abi {
             enable true //enables the ABIs split mechanism
             reset()
-            include 'arm64-v8a', 'x86_64'
+            include 'arm64-v8a', 'x86_64', 'x86'
             // include 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
             universalApk  true
         }
