--- a/packages/app/android/settings.gradle
+++ b/packages/app/android/settings.gradle
@@ -5,14 +5,15 @@ pluginManagement {
         def flutterSdkPath = properties.getProperty("flutter.sdk")
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
-    }
-    settings.ext.flutterSdkPath = flutterSdkPath()
-
-    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+    }()
+    settings.ext.flutterSdkPath = flutterSdkPath
+    settings.ext.kotlin_version = '1.9.24'
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
 
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' 
       }
     }
@@ -22,9 +23,9 @@ pluginManagement {
 plugins {
   id "dev.flutter.flutter-plugin-loader" version "1.0.0"
   id "com.android.application" version '8.6.1' apply false
-  id "org.jetbrains.kotlin.android" version "1.9.24" apply false
   id 'com.google.gms.google-services' version '4.4.2' apply false
-  id 'com.google.firebase.crashlytics' version '3.0.2' apply false
+  id "com.google.firebase.crashlytics" version "3.0.3" apply false
+  id "org.jetbrains.kotlin.android" version "1.9.24" apply false
 }
 
 include ':app'
