--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -57,12 +57,6 @@ android {
             abiFilters 'x86','x86_64','arm64-v8a'
             // abiFilters 'ARCH_X86','ARCH_ARM32','ARCH_ARM64'
         }
-
-        project.android.applicationVariants.all { variant ->
-            variant.outputs.each { output ->
-                  output.versionCodeOverride = flutterVersionCode.toInteger()
-              }
-        }
     }
     splits {
         abi {
@@ -85,6 +79,20 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+        }
+    }
+    
+    android.applicationVariants.all { variant ->
+        def buildType = variant.buildType.name
+        
+        variant.outputs.all { output ->
+            output.versionCodeOverride = flutterVersionCode.toInteger()
+            
+            def abiName = output.getFilter(com.android.build.OutputFile.ABI)
+            
+            def abiSuffix = abiName ? "-${abiName}" : "-universal"
+            
+            outputFileName = "Keychat-${flutterVersionName}-android${abiSuffix}.apk"
         }
     }
 }
