--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -85,7 +85,7 @@ dependencies:
   firebase_messaging: ^15.2.4
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
-  flutter_inappwebview: ^6.2.0-beta.2
+  flutter_inappwebview: ^6.1.5
   encrypt: ^5.0.3
   file_picker: ^10.0.0
   image: ^4.5.2
