--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.1.5
+  flutter_downloader: ^1.12.0
   encrypt: ^5.0.3
   file_picker: ^10.0.0
   image: ^4.5.2
