--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.31.11+6367
+version: 1.31.13+6370
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -86,6 +86,7 @@ dependencies:
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.1.5
+  flutter_downloader: ^1.12.0
   encrypt: ^5.0.3
   file_picker: ^10.0.0
   image: ^4.5.2
