--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -20,7 +20,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode','1')
 def flutterVersionName = localProperties.getProperty('flutter.versionName','1.0')
-
+def flutterNDKVersion = localProperties.getProperty('flutter.ndkVersion','29.0.13113456').toString()
 
 cargokit {
     manifestDir = "../../../keychat_rust_ffi_plugin/rust"
@@ -30,7 +30,7 @@ cargokit {
 android {
     compileSdkVersion localProperties.getProperty('flutter.compileSdkVersion').toInteger()
     namespace "com.keychat.io"
-    ndkVersion flutter.ndkVersion
+    ndkVersion flutterNDKVersion
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
