--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.32.2+6377
+version: 1.32.3+6378
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -85,7 +85,7 @@ dependencies:
   firebase_messaging: ^15.2.5
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
-  flutter_inappwebview: ^6.1.5
+  flutter_inappwebview: ^6.2.0-beta.2
   flutter_downloader: ^1.12.0
   encrypt: ^5.0.3
   file_picker: ^10.0.0
