--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   package_info_plus: ^8.1.1
   flutter_spinkit: ^5.2.0 # loading
-  modal_bottom_sheet: ^3.0.0-pre
+  modal_bottom_sheet: ^3.0.0
   dio: ^5.7.0
   photo_view: ^0.15.0
   image_picker: ^1.0.7 # select image
@@ -69,7 +69,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   video_player: ^2.9.2
   video_compress: ^3.1.4
-  markdown_widget: ^2.3.2+6
+  markdown_widget: ^2.3.2+8
   scroll_to_index: ^3.0.1
   connectivity_plus: ^6.1.0
   open_filex: ^4.7.0
