--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,6 +16,7 @@ analyzer:
       build/**,
       android/,
       packages/app/build/**,
+      packages/app/windows/flutter/ephemeral//**,
       packages/keychat_rust_ffi_plugin/lib/lib.dart,
     ]
 
