--- a/packages/app/ios/.gitignore
+++ b/packages/app/ios/.gitignore
@@ -17,6 +17,7 @@ xcuserdata
 **/.generated/
 Flutter/flutter_export_environment.sh
 Flutter/Generated.xcconfig
+Flutter/ephemeral/
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
 **/GoogleService-Info.plist
